# todo-board

./: .gitignore  README.md  app.py  check_todos.py  pyproject.toml  restart.sh  todo_worker.py
.github/workflows/: ci.yml
tests/: conftest.py  test_add.py  test_breakdown.py  test_breakdown_sessions.py  test_cancel.py  test_clear.py  test_config.py  test_counter.py  test_coverage_gaps.py  test_crypto.py  test_edit.py  test_entrypoint.py  test_github_and_plugins.py  test_github_poller_extra.py  test_github_poller_fetch.py  test_github_poller_unit.py  test_heartbeat.py  test_lock.py  test_misc_endpoints.py  test_new_coverage.py  test_news.py  test_planning.py  test_plugin_runner_unit.py  test_projects.py  test_questions.py  test_reorder.py  test_resume.py  test_retry.py  test_shutdown_recovery.py  test_startup_recovery.py  test_stats.py  test_status.py  test_storage_unit.py  test_worker_io.py  test_worker_limit_detection.py  test_worker_prompts.py  test_worker_unit.py
todo_board/: __main__.py  breakdown.py  config.py  github_poller.py  heartbeat.py  plugin_runner.py  server.py  spawner.py  storage.py  worker.py
todo_board/templates/: index.html
