[project]
name = "todo-board"
version = "0.1.0"
description = "Lightweight task queue and web UI for AI agent workflows"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.scripts]
todo-board = "todo_board.__main__:main"
todo-board-heartbeat = "todo_board.heartbeat:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
