[project]
name = "todo-board"
version = "0.1.0"
description = "Lightweight task queue and web UI for AI agent workflows"
requires-python = ">=3.11"
dependencies = [
    "btc-outlook",
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.scripts]
todo-board = "todo_board.__main__:main"
todo-board-heartbeat = "todo_board.heartbeat:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
btc-outlook = { path = "../btc-outlook" }

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=9",
    "pytest-asyncio>=0.21",
]
